--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="info">
     <img src="avatar.jpg" alt="Фото Дмитрия Козляка" class="avatar">
         <div class="info-text">
-        <h1>Козляк Дмитрий</h1>
+        <h1 class="h1">Козляк Дмитрий</h1>
         
         <p>Я <strong>программист</strong> html и css. Пишу только <strong>качественный</strong> код.</p>
 
@@ -106,7 +106,7 @@
         </div>
         <div class="form-group">
             <label for="message">Ваше сообщение</label>
-            <textarea id="message" cols="30" rows="10" placeholder="Введите сообщение"></textarea>
+            <textarea class="inp" id="message" cols="30" rows="10" placeholder="Введите сообщение"></textarea>
         </div>
         <input class="btn" type="submit" width="400px" value="Отправить">
     </form>
